moving back to simple ingestion demo

--- a/local_dbutils_tests.ipynb
+++ b/local_dbutils_tests.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dbutils is not available, use wrapper\n"
+      "dbutils is available\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,27 @@
    ],
    "source": [
     "dbutils.help()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'dbutils.fs' has no attribute 'help'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dbutils\u001b[39m.\u001b[39;49mfs\u001b[39m.\u001b[39;49mhelp()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'dbutils.fs' has no attribute 'help'"
+     ]
+    }
+   ],
+   "source": [
+    "dbutils.fs.help()"
    ]
   },
   {
