exploring trip data

--- a/preview_trip_data.ipynb
+++ b/preview_trip_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/01/05 09:06:19 WARN Utils: Your hostname, Shannons-Mac-mini.local resolves to a loopback address: 127.0.0.1; using 192.168.252.31 instead (on interface en0)\n",
-      "23/01/05 09:06:19 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/01/06 10:02:41 WARN Utils: Your hostname, Shannons-Mac-mini.local resolves to a loopback address: 127.0.0.1; using 192.168.252.31 instead (on interface en0)\n",
+      "23/01/06 10:02:41 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/01/05 09:06:20 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/01/06 10:02:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -47,15 +47,12 @@
    ],
    "source": [
     "spark = SparkSession.builder.getOrCreate()\n",
-    "fhvDF = spark.read.parquet(\"/Users/slowder/Repositories/Databricks/LocalStorage/bronze/fhv/\")\n",
-    "fhvhvDF = spark.read.parquet(\"/Users/slowder/Repositories/Databricks/LocalStorage/bronze/fhvhv/\")\n",
-    "greenDF = spark.read.parquet(\"/Users/slowder/Repositories/Databricks/LocalStorage/bronze/green/\")\n",
-    "yellowDF = spark.read.parquet(\"/Users/slowder/Repositories/Databricks/LocalStorage/bronze/yellow/\")\n"
+    "fhvDF = spark.read.parquet(\"/Users/slowder/Repositories/Databricks/LocalStorage/bronze/fhv/\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,22 +72,19 @@
     }
    ],
    "source": [
-    "fhvDF.printSchema()\n",
-    "#fhvhvDF.printSchema()\n",
-    "#greenDF.printSchema()\n",
-    "#yellowDF.printSchema()"
+    "fhvDF.printSchema()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 4:>                                                          (0 + 3) / 3]\r"
+      "[Stage 1:>                                                          (0 + 3) / 3]\r"
      ]
     },
     {
